[package]
name = "thaterror"
version = "1.0.64"
authors = ["David Tolnay <dtolnay@gmail.com>", "refcell <abigger87@gmail.com>"]
categories = ["rust-patterns"]
description = "derive(Error)"
documentation = "https://docs.rs/thaterror"
edition = "2021"
keywords = ["error", "error-handling", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/refcell/thaterror"
rust-version = "1.56"

[dependencies]
thiserror-impl = { version = "=1.0.64", path = "impl" }

[dev-dependencies]
anyhow = "1.0.73"
ref-cast = "1.0.18"
rustversion = "1.0.13"
trybuild = { version = "1.0.81", features = ["diff"] }

[workspace]
members = ["impl"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[features]
std = []
default = ["std"]

[[test]]
name = "test_path"
required-features = ["std"]
